--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,29 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+.country-list__item {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 15px;
+
+  font-size: 18px;
+}
+
+.country-info__title {
+  display: flex;
+  align-items: center;
+  height: 60px;
+  gap: 10px;
+  margin-bottom: 10px;
+
+  font-size: 24px;
+}
+
+.country-info__focus {
+  font-weight: 650;
+}
+
+.coutry-info__item {
+  font-size: 20px;
+}
